[tool.poetry]
name = "phonebook"
version = "0.1.0"
description = ""
authors = ["Konstantin Kozhevnikov <i@nowtiloos.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.1"
tabulate = "^0.9.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
